fix author title on mobile

--- a/styles/burger.scss
+++ b/styles/burger.scss
@@ -111,7 +111,7 @@ $content-bg: black;
 .author-name--styles {
     font-family: $fontheader;
     font-weight: 600;
-    font-size: 48px;
+    font-size: 30px;
 }
 
 @media only screen and (min-width: 768px) {
